# TINNOVA_DESAFIO_DEV

./: .gitignore  README.md
exercise-01/: README.md  vote_counter.py
exercise-01/tests/: test_vote_counter.py
exercise-02/: README.md  bubble_sort.py
exercise-02/tests/: test_bubble_sort.py
exercise-03/: README.md  factorial.py
exercise-03/tests/: test_factorial.py
exercise-04/: README.md  multiples.py
exercise-04/tests/: test_multiples.py
exercise-05/: README.md  docker-compose.yml
exercise-05/backend/: .env.example  README.md  pyproject.toml
exercise-05/backend/app/: main.py  seed.py
exercise-05/backend/app/core/: config.py  logger.py
exercise-05/backend/app/db/: database.py
exercise-05/backend/app/models/: __init__.py  brand.py  vehicle.py
exercise-05/backend/app/routers/: brand.py  logs.py  vehicle.py
exercise-05/backend/app/schemas/: brand.py  vehicle.py
exercise-05/backend/app/tests/: conftest.py  test_brand.py  test_vehicle.py
exercise-05/frontend/: .env.example  Dockerfile  package-lock.json  package.json  vite.config.js
exercise-05/frontend/src/: App.css  App.jsx
exercise-05/frontend/src/components/: LoadingStatus.jsx  VehicleCreate.jsx  VehicleData.jsx  VehicleList.jsx
exercise-05/frontend/src/services/: api.js  brandService.js  vehicleService.js
